recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:7: error: expected start of definition
	override def run() {
                 ^Spiral:11: error: Unmatched closing brace '}' ignored here
}
^